Fixed vertical spacing

--- a/static/style.css
+++ b/static/style.css
@@ -16,7 +16,7 @@
 
 .am-1 {
     text-align: left;
-    margin-bottom: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .heading-space {
